[gd_scene load_steps=21 format=2]

[ext_resource path="res://Textures/objects/books/book_cover_01.jpg" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/readingInterface/typeA_back.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/readingInterface/typeA_pages.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/readingInterface/typeA_binding.png" type="Texture" id=4]
[ext_resource path="res://fonts/Epittazio.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/UI/UI_MISC/BookReadBase.gd" type="Script" id=6]
[ext_resource path="res://Sounds/book_open.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/page_turn.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/page_turn2.wav" type="AudioStream" id=9]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
seamless = true
noise = SubResource( 1 )

[sub_resource type="VisualShaderNodeTexture" id=3]
texture = SubResource( 2 )

[sub_resource type="VisualShaderNodeInput" id=4]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarOp" id=5]
default_input_values = [ 0, 0.0, 1, 0.01 ]
operator = 2

[sub_resource type="VisualShaderNodeInput" id=6]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id=7]

[sub_resource type="VisualShader" id=8]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_2;



void vertex() {
// Output:0

}

void fragment() {
// Input:5
	vec3 n_out5p0 = vec3(UV, 0.0);

// Input:3
	float n_out3p0 = TIME;

// ScalarOp:4
	float n_in4p1 = 0.01000;
	float n_out4p0 = n_out3p0 * n_in4p1;

// VectorOp:6
	vec3 n_out6p0 = n_out5p0 + vec3(n_out4p0);

// Texture:2
	vec4 tex_frg_2_read = texture(tex_frg_2, n_out6p0.xy);
	vec3 n_out2p0 = tex_frg_2_read.rgb;
	float n_out2p1 = tex_frg_2_read.a;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 3 )
nodes/fragment/2/position = Vector2( -40, 180 )
nodes/fragment/3/node = SubResource( 4 )
nodes/fragment/3/position = Vector2( -620, 360 )
nodes/fragment/4/node = SubResource( 5 )
nodes/fragment/4/position = Vector2( -420, 320 )
nodes/fragment/5/node = SubResource( 6 )
nodes/fragment/5/position = Vector2( -380, 220 )
nodes/fragment/6/node = SubResource( 7 )
nodes/fragment/6/position = Vector2( -220, 280 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 1, 6, 0, 2, 0 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 46
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=11]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.498039 ) ]
}

[node name="BookReadBase" type="Node2D" groups=[
"UI_Special",
]]
pause_mode = 2
z_index = 5
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
material = SubResource( 9 )
position = Vector2( 509.465, 303.747 )
scale = Vector2( 4.39773, 2.64342 )
texture = ExtResource( 1 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( -33.487, -8.32448 )

[node name="typeA_binding" type="Sprite" parent="Container"]
position = Vector2( 537.186, 306.972 )
scale = Vector2( 0.67, 0.527 )
texture = ExtResource( 4 )

[node name="leftSide" type="Sprite" parent="Container"]
position = Vector2( 335.894, 306.57 )
scale = Vector2( 0.533724, 0.533724 )
texture = ExtResource( 2 )

[node name="leftPage" type="Sprite" parent="Container/leftSide"]
position = Vector2( 23.8779, 1.99939 )
texture = ExtResource( 3 )

[node name="rightSide" type="Sprite" parent="Container"]
position = Vector2( 740.713, 306.905 )
rotation = 3.14159
scale = Vector2( 0.534, -0.534 )
texture = ExtResource( 2 )

[node name="rightPage" type="Sprite" parent="Container/rightSide"]
position = Vector2( 27.6368, 1.99643 )
texture = ExtResource( 3 )

[node name="leftPageNumber" type="Label" parent="."]
margin_left = 307.016
margin_top = 512.185
margin_right = 347.016
margin_bottom = 615.185
rect_scale = Vector2( 0.564809, 0.564809 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightPageNumber" type="Label" parent="."]
margin_left = 682.976
margin_top = 512.185
margin_right = 722.976
margin_bottom = 615.185
rect_scale = Vector2( 0.564809, 0.564809 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftPageText" type="Label" parent="."]
margin_left = 166.0
margin_top = 77.0
margin_right = 593.0
margin_bottom = 634.0
rect_scale = Vector2( 0.749021, 0.749021 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "All horse-drawn vehicles of the civillian population being urgently required for agricultural purposes,"
autowrap = true

[node name="rightPageText" type="Label" parent="."]
margin_left = 523.0
margin_top = 77.0
margin_right = 948.0
margin_bottom = 637.0
rect_scale = Vector2( 0.749021, 0.749021 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "the big bad horse mane fought pbravely againsty the toil of man but it were wrought and fit to fare in coils meant only for beasts, misunderstood until the end ofg time."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="next" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sounds"

[node name="prev" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sounds"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 11 )

[node name="deload_delay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="deload_delay" to="." method="deload"]
